@startuml
skinparam classAttributeIconSize 0


class Game {
+main(args: String[])
}

abstract class Level {

    +{abstract} void initLevel()
    +void initRain()
    +void initSun()
    +void initSnow()
    +void initBright()
    +void initCloud()


}

class MountainLevel {
+initLevel()

}


class SkyLevel {
 +initLevel()

}

class ForestLevel{
+initLevel()
}


Level <|-- SkyLevel
Level <|-- ForestLevel
Level <|-- MountainLevel
Game .-> Level








@enduml